se agrega opcion de inscripciones